Fix recipe list alignment, change title font

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     font-size: 24px;
     color: rgb(193, 182, 168);
     background-color: rgb(53, 40, 20);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .head.title {
@@ -25,7 +25,7 @@ body {
 }
 
 #recipes {
-    align: center;
+    text-align: center;
     font-size: 24px;
     list-style: circle;
 }
